Add a user model! Login/Register + all that jazz

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,11 @@
 
 <%= yield %>
 
+<div class='logout'>
+  <% if session[:user_id] && @user then %>
+    <p>Logged in as <%= @user.username %>, <%= link_to "Logout", logout_path %></p>
+  <% end %>
+</div>
+
 </body>
 </html>
