--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,16 @@
 </head>
 <body class='<%= controller.controller_name %>'>
 
+<div class='navbar'>
+  <ul class='options'>
+    <li class='nav-option' id='tomato-icon'><%= image_tag("tomato.png") %></li>
+    <li class='nav-option' id='home'><a href='/'>Home</a></li>
+    <% if current_user then %>
+      <li class='nav-option' id='username'><%= link_to current_user.username.capitalize, user_path(current_user) %></li>
+    <% end %>
+  </ul>
+</div>
+
 <%= yield %>
 
 <div class='logout'>
