--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,2 @@
-<h1><%= @user.username %>'s Profile page!</h1>
+<h1><%= @user.username.capitalize %>'s Profile page!</h1>
 <p>Start with some <%= link_to "Questions!", next_question_url() %></p>
