--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -8,36 +8,43 @@
         font-size: 40px;
         margin: 15px;
     }
-    li {
-        height: 30px;
-        line-height: 30px;
-        padding: 10px;
-        border-radius: 20px;
-        max-width: 600px;
-        margin-left: 40px;
-        list-style: none;
+    .skills {
         font-family: sans-serif;
-        cursor: pointer;
-        .answer_text {
-            display: inline-block;
-            vertical-align: middle;
-            font-size: 20px;
-            margin-left: 10px;
-        }
-        .label {
-            height: 20px;
-            width: 20px;
-            vertical-align: middle;
-            display: inline-block;
-            background: #2b8953;
-            border: 5px solid #aaa;
-            border-radius: 45%;
-        }
+        margin-left: 15px;
+        margin-bottom: 20px;
     }
-    li:hover {
-        background: #aaa;
-        .label {
-            border-color: #fff;
+    .answers {
+        li {
+            height: 30px;
+            line-height: 30px;
+            padding: 10px;
+            border-radius: 20px;
+            max-width: 600px;
+            margin-left: 40px;
+            list-style: none;
+            font-family: sans-serif;
+            cursor: pointer;
+            .answer_text {
+                display: inline-block;
+                vertical-align: middle;
+                font-size: 20px;
+                margin-left: 10px;
+            }
+            .label {
+                height: 20px;
+                width: 20px;
+                vertical-align: middle;
+                display: inline-block;
+                background: #2b8953;
+                border: 5px solid #aaa;
+                border-radius: 45%;
+            }
+        }
+        li:hover {
+            background: #aaa;
+            .label {
+                border-color: #fff;
+            }
         }
     }
 }
