--- a/app/views/question/show.html.erb
+++ b/app/views/question/show.html.erb
@@ -1,13 +1,22 @@
 <h1 class='question_text' id='<%= @question.id %>'><%= @question.prompt %></h1>
-<ul>
-  <% @question.answers.shuffle.each_with_index do |answer, index| %>
-    <li class='answer' id='<%= answer.id %>'>
-      <div class='label'>
-      </div>
-      <p class='answer_text'>
-        <%= answer.answer_text %>
-      </p>
-    </li>
+<div class='skills'>
+  <ul>
+  <% @question.skills.each do |skill| %>
+    <li class='skill'>Skill: <%= skill.name %>, Level: <%= current_user.user_skills.where(skill_id: skill.id).first.level %></li>
   <% end %>
-  <p class="hint"></p>
-</ul>
+  </ul>
+</div>
+<div class='answers'>
+  <ul>
+    <% @question.answers.shuffle.each do |answer| %>
+      <li class='answer' id='<%= answer.id %>'>
+        <div class='label'>
+        </div>
+        <p class='answer_text'>
+          <%= answer.answer_text %>
+        </p>
+      </li>
+    <% end %>
+    <p class="hint"></p>
+  </ul>
+</div>
