added tomato logo, changed brand font, created active and hover states for nav links

--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -9,3 +9,7 @@ $accent-color: #fefced;
 $secondary-color: #2f6449;
 $light-grey: #d2d2d2;
 $dark-grey: #565555;
+
+
+/* SIZES */
+$content-width: 980px;
