--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,19 +8,23 @@
 </head>
 <body class='<%= controller.controller_name %>'>
 
-<div class='navbar'>
-  <ul class='options'>
-    <li class='nav-option' id='tomato-icon'><%= image_tag("tomato.png") %></li>
-    <li class='nav-option active-nav' id='home'><a href='/'>Home</a></li>
-    <li class='nav-option' id='home'><a href='/'>For Kids</a></li>
-    <li class='nav-option' id='home'><a href='/'>For Parents</a></li>
-    <% if current_user then %>
-      <li class='nav-option' id='username'><%= link_to current_user.username.capitalize, user_path(current_user) %></li>
-    <% end %>
-  </ul>
+<div class='navbar-wrapper'>
+  <div class='navbar'>
+    <ul class='options'>
+      <li class='nav-option' id='logo'><span id="tomato-logo"><%= image_tag("tomato.svg") %></span><span id="name">tomato</span></li>
+      <li class='nav-link nav-option active-nav' id='home'><a href='/'>Home</a></li>
+      <li class='nav-link nav-option' id='home'><a href='/'>For Kids</a></li>
+      <li class='nav-link nav-option' id='home'><a href='/'>For Parents</a></li>
+      <% if current_user then %>
+        <li class='nav-option' id='username'><%= link_to current_user.username.capitalize, user_path(current_user) %></li>
+      <% end %>
+    </ul>
+  </div>
 </div>
 
-<%= yield %>
+<div class='content-wrapper'>
+  <%= yield %>
+</div>
 
 <div class='logout'>
   <% if session[:user_id] && @user then %>
