--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,9 @@
  */
 
  @import "variables.css.scss";
+ @import "mixins.css.scss";
+
+@import url(http://fonts.googleapis.com/css?family=Rancho);
 
 /* reset styles */
 
@@ -22,36 +25,62 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     margin-top: 40px;
 }
 
-.navbar {
-    background: #2b8953; //rgb(50,156,98);
+.navbar-wrapper {
+    background: $primary_color;
     width: 100%;
     margin: 0px;
     padding: 0px;
-    height: 50px;
-    .options {
-        color: #fff;
-        font-weight: 200;
-        font-family: sans-serif;
-        font-size: 20px;
-        line-height: 50px;
-        a {
+    height: 75px;
+    .navbar {
+        width: $content-width;
+        margin-right: auto;
+        margin-left: auto;
+        padding-top: 10px;
+        .options {
             color: #fff;
-            text-decoration: none;
-        }
-        .nav-option {
-            vertical-align: middle;
-            list-style-type: none;
-            display: inline;
-            margin-left: 20px;
-        }
-        #tomato-icon {
-            margin: 0px 0 0 20px;
-            img {
+            font-weight: 200;
+            font-family: sans-serif;
+            font-size: 16px;
+            line-height: 50px;
+            a {
+                color: #fff;
+                text-decoration: none;
+            }
+            .nav-option, .nav-link {
                 vertical-align: middle;
+                list-style-type: none;
+                display: inline;
+            }
+            .nav-link {
+                margin-left: 15px;
+                font-family: "Trebuchet MS", sans-serif;
+                font-size: 18px;
+                font-weight: lighter;
+                padding: 10px 15px 10px 15px;
+                @include border-radius(18px);
+            }
+            .nav-link:hover, .active-nav {
+                background: $secondary-color;
+            }
+            #logo {
+                font-family: "Rancho";
+                font-size: 56px;
+                margin-right: 50px;
+                #name {
+                    padding-left: 20px;
+                }
+                #tomato-logo {
+                    margin: 0px 0 0 20px;
+                    vertical-align: top;
+                    display: inline-block;
+                }
             }
         }
-        .active-nav {
-            background: $secondary-color;
-        }
     }
+}
+
+.content-wrapper {
+    width: $content-width;
+    margin-right: auto;
+    margin-left: auto;
 }
