--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,39 @@
-<h1><%= @user.username.capitalize %>'s Profile page!</h1>
 <p>Start with some <%= link_to "Questions!", next_question_url() %></p>
+
+<!-- steps -->
+<div class="container" id="steps-container">
+	<div class="step" id="food-groups">
+		<h2>Food Groups</h2>
+		<ul class="substep">
+			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Basics</h3></div></li>
+			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Classifying</h3></div></li>
+		</ul>
+	</div>
+	<div class="step" id="serving-sizes">
+		<h2>Serving Sizes</h2>
+		<ul class="substep">
+			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Why does it matter?</h3></div></li>
+			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>How much should I eat?</h3></div></li>
+			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Enough is enough!</h3></div></li>
+		</ul>
+	</div>
+	<div class="step" id="healty-meals">
+		<h2>Healthy Meals</h2>
+		<ul class="substep">
+			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>What am I missing?</h3></div></li>
+			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Eat this, not that!</h3></div></li>
+			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>When's dessert?</h3></div></li>
+		</ul>
+	</div>
+	<div class="step" id="meal-planning">
+		<h2>Plan Your Daily Meals</h2>
+		<ul class="substep">
+			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Meal Planner</h3></div></li>
+		</ul>
+	</div>
+</div>
+
+<!-- progress -->
+<div class="container" id="progress-container">
+	
+</div>
