lightened up h3 and added step numbers

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,14 +3,14 @@
 <!-- steps -->
 <div class="container" id="steps-container">
 	<div class="step" id="food-groups">
-		<h2>Food Groups</h2>
+		<h2>1. Food Groups</h2>
 		<ul class="substep">
 			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Basics</h3></div></li>
 			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Classifying</h3></div></li>
 		</ul>
 	</div>
 	<div class="step" id="serving-sizes">
-		<h2>Serving Sizes</h2>
+		<h2>2. Serving Sizes</h2>
 		<ul class="substep">
 			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Why does it matter?</h3></div></li>
 			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>How much should I eat?</h3></div></li>
@@ -18,7 +18,7 @@
 		</ul>
 	</div>
 	<div class="step" id="healty-meals">
-		<h2>Healthy Meals</h2>
+		<h2>3. Healthy Meals</h2>
 		<ul class="substep">
 			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>What am I missing?</h3></div></li>
 			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Eat this, not that!</h3></div></li>
@@ -26,7 +26,7 @@
 		</ul>
 	</div>
 	<div class="step" id="meal-planning">
-		<h2>Plan Your Daily Meals</h2>
+		<h2>4. Plan Your Daily Meals</h2>
 		<ul class="substep">
 			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Meal Planner</h3></div></li>
 		</ul>
