got it to work on my computer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,10 +11,11 @@
  *= require_self
  */
 
- @import "variables.css.scss";
- @import "mixins.css.scss";
- @import "user.scss";
- @import "fonts.css.scss";
+@import "variables.css.scss";
+@import "mixins.css.scss";
+@import "user.scss";
+@import "fonts.css.scss";
+@import "questions.css.scss";
 
 @import url(http://fonts.googleapis.com/css?family=Rancho);
 
