created individual identification for different skills

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -20,6 +20,7 @@
 	.step {
 		height: 290px;
 		width: 90%;
+		padding-bottom: 30px;
 		margin: 30px auto 45px auto;
 		border-bottom: 1px solid $light-grey;
 		.substep {
@@ -29,15 +30,41 @@
 			text-align: center;
 			li {
 				display: inline-block;
-				margin: 0 40px 0 40px;
+				margin: 0 25px 0 25px;
 				vertical-align: top;
 			}
-			.substep-title {
-				margin-top: 15px;
-				width: 100px;
+			li.locked {
+				h3 {
+					color: $light-grey;
+				}
+				.substep-icon {
+					background: #cccccc;
+				}
+				.substep-image {
+					-webkit-filter: grayscale(100%) opacity(30%);
+				}
 			}
-			.substep-image {
-
+			li.unlocked {
+				.substep-icon:hover {
+					background: $lighter-primary-color;
+				}
+			}
+			.substep-title {
+				margin: 15px auto 0 auto;
+				width: 150px;
+			}
+			.substep-icon {
+				background: $primary-color;
+				display: inline-block;
+				height: 150px;
+				width: 150px;
+				@include border-radius(74px);
+				.substep-image{
+					display: inline-block;
+					margin: 30px auto 0 auto;
+					height: 100px;
+					width: 100px;
+				}
 			}
 		}
 	}
@@ -50,3 +77,14 @@
 	width: 27%;
 	height: 300px;
 }
+
+
+#food-groups-1 span {background-image: image-url("food-groups-basics.svg"); background-repeat: no-repeat;}
+#food-groups-2 span {background-image: image-url("food-groups-basics.svg"); background-repeat: no-repeat;}
+#serving-sizes-1 span {background-image: image-url("food-groups-basics.svg"); background-repeat: no-repeat;}
+#serving-sizes-2 span {background-image: image-url("food-groups-basics.svg"); background-repeat: no-repeat;}
+#serving-sizes-3 span {background-image: image-url("food-groups-basics.svg"); background-repeat: no-repeat;}
+#healthy-meals-1 span {background-image: image-url("food-groups-basics.svg"); background-repeat: no-repeat;}
+#healthy-meals-2 span {background-image: image-url("food-groups-basics.svg"); background-repeat: no-repeat;}
+#healthy-meals-3 span {background-image: image-url("food-groups-basics.svg"); background-repeat: no-repeat;}
+#meal-planning-1 span {background-image: image-url("food-groups-basics.svg"); background-repeat: no-repeat;}
