--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -5,6 +5,7 @@
 /* COLOR */
 
 $primary-color: #339966;
+$lighter-primary-color: #3aa770;
 $accent-color: #fefced;
 $secondary-color: #2f6449;
 $light-grey: #d2d2d2;
