--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,30 +5,93 @@
 	<div class="step" id="food-groups">
 		<h2>1. Food Groups</h2>
 		<ul class="substep">
-			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Basics</h3></div></li>
-			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Classifying</h3></div></li>
+			<li class="unlocked" id="food-groups-basics">
+				<div class="substep-icon" id="food-groups-1">
+					<span class="substep-image"></span>
+				</div>
+				<div class="substep-title">
+					<h3>Basics</h3>
+				</div>
+			</li>
+			<li class="locked">
+				<div class="substep-icon" id="food-groups-2">
+					<span class="substep-image"></span>
+				</div>
+				<div class="substep-title">
+					<h3>Classifying</h3>
+				</div>
+			</li>
 		</ul>
 	</div>
 	<div class="step" id="serving-sizes">
 		<h2>2. Serving Sizes</h2>
 		<ul class="substep">
-			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Why does it matter?</h3></div></li>
-			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>How much should I eat?</h3></div></li>
-			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Enough is enough!</h3></div></li>
+			<li class="locked" id="serving-sizes-1">
+				<div class="substep-icon">
+					<span class="substep-image"></span>
+				</div>
+				<div class="substep-title">
+					<h3>Why does it matter?</h3>
+				</div>
+			</li>
+			<li class="locked">
+				<div class="substep-icon" id="serving-sizes-2">
+					<span class="substep-image"></span>
+				</div>
+				<div class="substep-title">
+					<h3>How much should I eat?</h3>
+				</div>
+			</li>
+			<li class="locked">
+				<div class="substep-icon" id="serving-sizes-3">
+					<span class="substep-image"></span>
+				</div>
+				<div class="substep-title">
+					<h3>Enough is enough!</h3>
+				</div>
+			</li>
 		</ul>
 	</div>
 	<div class="step" id="healty-meals">
 		<h2>3. Healthy Meals</h2>
 		<ul class="substep">
-			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>What am I missing?</h3></div></li>
-			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Eat this, not that!</h3></div></li>
-			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>When's dessert?</h3></div></li>
+			<li class="locked">
+				<div class="substep-icon" id="healthy-meals-1">
+					<span class="substep-image"></span>
+				</div>
+				<div class="substep-title">
+					<h3>What am I missing?</h3>
+				</div>
+			</li>
+			<li class="locked">
+				<div class="substep-icon" id="healthy-meals-2">
+					<span class="substep-image"></span>
+				</div>
+				<div class="substep-title">
+					<h3>Eat this, not that!</h3>
+				</div>
+			</li>
+			<li class="locked">
+				<div class="substep-icon" id="healthy-meals-3">
+					<span class="substep-image"></span>
+				</div>
+				<div class="substep-title">
+					<h3>When's dessert?</h3>
+				</div>
+			</li>
 		</ul>
 	</div>
 	<div class="step" id="meal-planning">
 		<h2>4. Plan Your Daily Meals</h2>
 		<ul class="substep">
-			<li><div class="substep-image"><%= image_tag("apple.svg") %></div><div class="substep-title"><h3>Meal Planner</h3></div></li>
+			<li class="locked">
+				<div class="substep-icon" id="meal-planning-1">
+					<span class="substep-image"></span>
+				</div>
+				<div class="substep-title">
+					<h3>Meal Planner</h3>
+				</div>
+			</li>
 		</ul>
 	</div>
 </div>
