--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -8,6 +8,9 @@
         margin-left: 15px;
         margin-bottom: 20px;
     }
+    .question-text {
+        padding: 20px 0 0 20px;
+    }
     .answers {
         .answer {
             height: 30px;
@@ -15,15 +18,17 @@
             padding: 10px;
             border-radius: 20px;
             max-width: 600px;
-            margin-left: 40px;
+            margin: 14px 40px;
             list-style: none;
             font-family: sans-serif;
             cursor: pointer;
             .answer_text {
                 display: inline-block;
                 vertical-align: middle;
-                font-size: 20px;
+                font-size: 24px;
                 margin-left: 10px;
+                font-family: "Trebuchet MS", sans-serif;
+                color: $dark-grey;
             }
             .label {
                 height: 25px;
@@ -45,6 +50,24 @@
             .label {
                 border-color: #fff;
             }
+            .answer_text {
+                color: #fff;
+            }
         }
     }
+}
+
+.skills {
+    display: inline-block;
+    padding-top: 25px;
+}
+
+#next-question {
+    margin-left: 600px;
+    margin-bottom: 20px;
+    vertical-align: top;
+}
+
+#question-container {
+    margin-top: 30px;
 }
