--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -1,4 +1,4 @@
-h1, h2, h3 {
+h1, h2, h3, h4 {
 	font-family: "Trebuchet MS", sans-serif;
 }
 
@@ -18,4 +18,16 @@ h3 {
 	font-size: 22px;
 	line-height: 23px;
 	font-weight: lighter;
+}
+
+h4 {
+	font-size: 16px;
+	text-transform: uppercase;
+	color: $dark-grey;
+}
+
+h5 {
+	font-size: 12px;
+	text-transform: uppercase;
+	color: $light-grey;
 }
