--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -9,7 +9,7 @@
         margin-bottom: 20px;
     }
     .question-text {
-        padding: 20px 0 0 20px;
+        padding: 20px 0 10px 20px;
     }
     .answers {
         .answer {
@@ -17,7 +17,7 @@
             line-height: 30px;
             padding: 10px;
             border-radius: 20px;
-            max-width: 600px;
+            max-width: 840px;
             margin: 14px 40px;
             list-style: none;
             font-family: sans-serif;
