--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <!-- steps -->
 <div class="container" id="steps-container">
 	<div class="step" id="food-groups">
-		<h2>1. Food Groups</h2>
+		<h2>Food Groups</h2>
 		<ul class="substep">
 			<li class="unlocked" id="food-groups-basics">
 				<div class="substep-icon" id="food-groups-1">
@@ -24,7 +24,7 @@
 		</ul>
 	</div>
 	<div class="step" id="serving-sizes">
-		<h2>2. Serving Sizes</h2>
+		<h2>Serving Sizes</h2>
 		<ul class="substep">
 			<li class="locked" id="serving-sizes-1">
 				<div class="substep-icon">
@@ -53,7 +53,7 @@
 		</ul>
 	</div>
 	<div class="step" id="healty-meals">
-		<h2>3. Healthy Meals</h2>
+		<h2>Healthy Meals</h2>
 		<ul class="substep">
 			<li class="locked">
 				<div class="substep-icon" id="healthy-meals-1">
@@ -82,7 +82,7 @@
 		</ul>
 	</div>
 	<div class="step" id="meal-planning">
-		<h2>4. Plan Your Daily Meals</h2>
+		<h2>Plan Your Daily Meals</h2>
 		<ul class="substep">
 			<li class="locked">
 				<div class="substep-icon" id="meal-planning-1">
@@ -98,5 +98,9 @@
 
 <!-- progress -->
 <div class="container" id="progress-container">
-	
+	<h4>Your Progress</h4>
+	<p>Food Groups</p>
+	<p>Serving Sizes</p>
+	<p>Healthy Meals</p>
+	<p>Planning Meals</p>
 </div>
