--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -1,4 +1,4 @@
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5, h6 {
 	font-family: "Trebuchet MS", sans-serif;
 }
 
@@ -13,12 +13,14 @@ h2 {
 	color: $dark-grey;
 }
 
-h3 {
+h3, h6 {
 	color: $dark-grey;
-	font-size: 22px;
 	line-height: 23px;
 	font-weight: lighter;
 }
+
+h3 { font-size: 19px; }
+h6 { font-size: 30px; }
 
 h4 {
 	font-size: 16px;
