--- a/app/views/question/show.html.erb
+++ b/app/views/question/show.html.erb
@@ -8,12 +8,13 @@
         <li class='answer' id='<%= answer.id %>'>
           <div class='label'>
           </div>
-          <p class='answer_text'>
+          <p class='answer-text'>
             <%= answer.answer_text %>
           </p>
+          <br/>
+          <i class='fa fa-times hidden'></i><i class='fa fa-check hidden'></i><p class="hint"></p>
         </li>
       <% end %>
-      <p class="hint"></p>
     </ul>
   </div>
   <div class='skills'>
