faked in progress by adding a background image

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 	<div class="step" id="food-groups">
 		<h2>Food Groups</h2>
 		<ul class="substep">
-			<li class="unlocked" id="food-groups-basics">
+			<li class="current" id="food-groups-basics">
 				<div class="substep-icon" id="food-groups-1">
 					<span class="substep-image"></span>
 				</div>
