--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -37,6 +37,12 @@
 				margin: 0 8px 0 8px;
 				vertical-align: top;
 			}
+			li.completed {
+				.substep-icon:hover {
+					background: $lighter-primary-color;
+					cursor: pointer;
+				}
+			}
 			li.locked {
 				h3 {
 					color: $light-grey;
@@ -48,9 +54,14 @@
 					-webkit-filter: grayscale(100%) opacity(30%);
 				}
 			}
-			li.unlocked {
+			li.current {
+				.substep-icon {
+					background: #ffffff;
+					background-image: image-url("in-progress.svg"); 
+					background-repeat: no-repeat;
+				}
 				.substep-icon:hover {
-					background: $lighter-primary-color;
+					-webkit-filter: opacity(90%);
 					cursor: pointer;
 				}
 			}
