fixed alignment of percentage

--- a/app/views/question/show.html.erb
+++ b/app/views/question/show.html.erb
@@ -4,7 +4,7 @@
   <div class="progress">
     <div id="full-bar"> </div>
     <div id="progress-bar" style="width: <%= 100*progress %>%;"> </div>
-    <p id="progress-number" style="right: <%= [5, 100*progress+1].max %>%;"><%= (100*progress).round %>&#37</p>
+    <p id="progress-number" style="left: <%= [0, 100*progress - 4].max %>%;"><%= (100*progress).round %>&#37</p>
   </div>
   <h6 class="question-text" id='<%= @question.id %>'><%= @question.prompt %></h6>
   <div class='answers'>
