added (fake) progress to user page

--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -101,27 +101,28 @@
 #question-container {
     margin-top: 30px;
 }
-.progress {
-    position: relative;
-    height: 40px;
+.question {
+    .progress {
+        position: relative;
+        height: 40px;
+    }
+    #progress-bar {
+        border-radius: 50px;
+        height: 100%;
+        background: $primary-color;
+        position: absolute;
+    }
+    #full-bar {
+        border-radius: 50px;
+        height: 100%;
+        width: 100%;
+        background: $dark-grey;
+        position: absolute;
+    }
+    #progress-number {
+        font-family: "Trebuchet MS", sans-serif;
+        position: absolute;
+        line-height: 40px;
+        color: #fff;
+    }
 }
-#progress-bar {
-    border-radius: 50px;
-    height: 100%;
-    background: $primary-color;
-    position: absolute;
-}
-#full-bar {
-    border-radius: 50px;
-    height: 100%;
-    width: 100%;
-    background: $dark-grey;
-    position: absolute;
-}
-#progress-number {
-    font-family: "Trebuchet MS", sans-serif;
-    position: absolute;
-    line-height: 40px;
-    color: #fff;
-}
-
