added help text on the user page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <!-- steps -->
 <div class="container" id="steps-container">
+  <h3>Welcome!</h3>
+  <p id='help-text'>This is the page where you can view your progress, and choose new categories to explore. Click on one of the colored categories below to get started!</p>
 	<div class="step" id="food-groups">
 		<h2>Food Groups</h2>
 		<ul class="substep">
