--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -2,6 +2,13 @@
 @import "variables.css.scss";
 
 .users {
+    #help-text {
+        font-family: sans-serif;
+        font-size: 15px;
+        padding-bottom: 10px;
+        margin: 10px 0px;
+        border-bottom: 1px solid $light-grey;
+    }
     .progress {
         position: relative;
         height: 20px;
