--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,7 @@
  @import "user.scss";
  @import "fonts.css.scss";
  @import "questions.css.scss";
+ @import "home.scss";
  @import "buttons.css.scss";
 
 @import url(http://fonts.googleapis.com/css?family=Rancho);
